# dev-notebook

./: .gitignore  readme.md
C++/00 - TrackSkip/: CMakeLists.txt  main.cpp
C++/00_trackSkip/: CMakeLists.txt  main.cpp
Go/draft/: go.mod
Go/draft/cmd/: main.go
Go/examples/01/: go.mod
Go/examples/03_bubbles/: go.mod
Go/examples/03_bubbles/cmd/: main.go
Go/examples/05_pipeWriter/cmd/: voxctl.go
Go/modules/: go.mod  go.sum
Go/modules/cmd/: main.go
Go/modules/cmd/ollama/: main.go
Go/modules/cmd/server/: main.go
Go/modules/cmd/test/: main.go
Go/modules/internal/audio/: audio.go
Go/modules/internal/config/: config.go
Go/modules/internal/input/: input.go
Go/modules/internal/log/: log.go
Go/modules/internal/server/: server.go
Go/modules/internal/speech/: speech.go
Go/modules/internal/types/: state.go
Python/01-autogen/: .gitignore  agent.py  main.py
Python/01-autogen/.cache/41/: cache.db
Python/01-autogen/.notes/: __init__.py
Python/01-autogen/agents/: architect.py  assistant.py  dev_junior.py  dev_senior.py  manager.py
Python/01-autogen/agents/dev/: dev_junior.py  manager.py
Python/01-autogen/agents_test/: architect.py  dev_senior.py
Python/01-autogen/config/: config.py
Python/02_crew_ai/: main.py
Python/02_crew_ai/agents/: architect.py  assistant.py  dev_junior.py  dev_senior.py  manager.py
Python/02_crew_ai/utils/: ollama.py  tasks.py  workflow.py
Python/03_crew_ai_template/: main.py  pyproject.toml
Python/03_crew_ai_template/utils/: agents.py  tasks.py
Rust/examples/exp_02_text_to_speech/: Cargo.toml
Rust/examples/exp_02_text_to_speech/tests/: test.rs
Rust/examples/exp_03_multi-threaded_media_player/: Cargo.toml
Rust/examples/exp_03_multi-threaded_media_player/src/: main.rs
Rust/examples/exp_05_vosk/: build.rs
Rust/examples/exp_05_vosk/src/: main.rs
Rust/examples/exp_06_thread_control/: Cargo.toml
Rust/examples/exp_06_thread_control/src/: _utils.rs  main.rs
Rust/examples/exp_08_media_player/: Cargo.toml
Rust/examples/exp_10_speak_text/backup/: lib.2.rs
Rust/examples/exp_11_clean_hexigonal_architecture/_core/: Cargo.toml
Rust/examples/exp_11_clean_hexigonal_architecture/_core/src/_utils/: playback.rs
Rust/examples/exp_12_new/: .gitignore
Rust/examples/exp_13_surrealdb/: history.txt
Rust/examples/exp_13_surrealdb/storage/: 000077.sst  MANIFEST-000074
Rust/examples/exp_14_google_speech/: cargo.toml
Rust/examples/exp_14_google_speech/_core/: Cargo.toml
Rust/examples/exp_15_surrealdb_create/: Cargo.toml
Rust/examples/exp_15_surrealdb_create/src/: main.rs
Rust/examples/exp_16_websockets/: package.json
Rust/examples/exp_16_websockets/src-tauri/: Cargo.toml
Rust/examples/exp_16_websockets/src-tauri/src/: main.rs
Rust/examples/exp_17_text_streaming/: .gitignore
TypeScript/02_stocks.js/: README.md  bun.lockb  index.ts  package.json  stocks.ts
TypeScript/03_langchain_workflow/: README.md  bun.lockb  jest.config.cjs  package.json
TypeScript/03_langchain_workflow/notes/: interface.txt  trading-bot.md
TypeScript/03_langchain_workflow/src/: main.ts
TypeScript/03_langchain_workflow/tests/: fetchStockData.test.ts  main.test.ts  runWorkflow.test.ts
TypeScript/04_quokka/: bun.lockb  package.json
TypeScript/04_quokka/src/: main.ts  workflow.ts
TypeScript/05_npm_quokka/: package-lock.json  package.json
TypeScript/05_npm_quokka/src/: main.js  workflow.js
TypeScript/06_jest/: README.md  bun.lockb  package.json  tsconfig.json
TypeScript/06_jest/tests/: main.test.ts
TypeScript/07_svgs/: bun.lockb  package.json
TypeScript/07_vite/: bun.lockb  package.json
TypeScript/08_pinecone/: deno.json  main.ts
go/examples/01/: go.sum
go/examples/03_bubbles/: go.sum
go/examples/05_pipeWriter/: go.mod
go/examples/06_ollama/: go.mod
go/modules/: go.mod
rust/examples/exp_01_tts_player/: Cargo.toml
rust/examples/exp_01_tts_player/src/: main.rs
rust/examples/exp_01_tts_player/src/utils/: mod.rs  save_audio.rs
rust/examples/exp_03_multi-threaded_media_player/: .gitignore
rust/examples/exp_04_whisper/: Cargo.toml
rust/examples/exp_04_whisper/src/: _utils.rs  main.rs
rust/examples/exp_04_whisper/src/_utils/: record.rs
rust/examples/exp_05_vosk/: Cargo.toml
rust/examples/exp_09_rodio/: Cargo.toml
rust/examples/exp_10_speak_text/: Cargo.toml
rust/examples/exp_11_clean_hexigonal_architecture/: Cargo.toml
rust/examples/exp_13_surrealdb/: Cargo.toml
rust/examples/exp_13_surrealdb/src/: main.rs
rust/examples/exp_13_surrealdb/storage/: IDENTITY  history.txt
rust/examples/exp_17_text_streaming/: package-lock.json  package.json
rust/examples/exp_18_websocket/: .gitignore
rust/examples/exp_18_websocket/_server/: Cargo.toml
rust/examples/exp_18_websocket/_server/src/: ws.rs
(+76 files in other folders)
