[tool.poetry]
name = "starter-template"
version = "0.1.0"
description = ""
authors = ["Luke <lucian.io@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
langchain-openai = ">=0.1.0,<0.2.0"
python-decouple = "^3.8"
duckduckgo-search = "^6.1.5"
crewai = "^0.30.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
