[package]
name = "multi-threaded_media_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
ollama-rs = { version = "0.1.6", features = ["stream"] }
reqwest = { version = "0.11.24", features = ["json"] }
rodio = "0.17.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
