[package]
name = "exp_15_surrealdb_create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { version = "1.2.2", features = ["kv-rocksdb"] }
tokio = { version = "1.36.0", features = ["full"] }
