[package]
name = "tts_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dotenv = "0.15.0"
mockito = "1.2.0"
reqwest = { version = "0.11.23", features = ["json"] }
rodio = "0.17.3"
tokio = { version = "1.35.1", features = ["full"] }
