[package]
name = "exp_04_whisper"
version = "0.1.0"
edition = "2021"
# max_width = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cpal = "0.15.2"
dasp_sample = "0.11.0"
dasp_signal = "0.11.0"
dotenv = "0.15.0"
hound = "3.5.1"
rodio = "0.17.3"
tempfile = "3.10.0"
whisper-rs = "0.10.0"
tokio = { version = "1.35.1", features = ["full"] }
simple_transcribe_rs = "1.0.3"
vosk = "0.2.0"
rubato = "0.14.1"
serde_json = "1.0.113"

