[package]
name = "_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unused = "allow"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rodio = "0.17.3"
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
sentence = "0.0.2"
tokio-stream = "0.1.14"
anyhow = "1.0.80"
vosk = "0.2.0"
hound = "3.5.1"
