[package]
name = "_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
surrealdb = { version = "1.3.0", features = ["kv-rocksdb"] }
chrono = "0.4.35"
ws = "0.9.2"
